# University

Additionals/Add N1/: 1.1Add.cpp  CMakeLists.txt
Additionals/Add N10/: KoR.iss
Additionals/Add N2/: 2.1Add.cpp  CMakeLists.txt
Additionals/Add N3/: 3.1Add.cpp  3.1Add_func.cpp  3.1Add_func.hpp  CMakeLists.txt
Additionals/Add N5/: 5.1Add.cpp  5.1Add_f.cpp  5.1Add_f.hpp  CMakeLists.txt
Additionals/Add N7/: 7.1Add.cpp  CMakeLists.txt
Additionals/Add N8/: 8.1Add.cpp  CMakeLists.txt  square.cpp  square.hpp
Exam/: CMakeLists.txt  README.md  main.cpp
Exam/inc/: character.hpp  pit.hpp  stones.hpp
Exam/installer/: KoR.iss  License_ENG.txt  License_RUS.txt
Exam/src/: character.cpp  pit.cpp  stones.cpp
Laboratory work's/Lab N1/: 1Lab.cpp
Laboratory work's/Lab N10/: circle.cpp  circle.hpp
Laboratory work's/Lab N11/: CMakeLists.txt  module.cpp  module.hpp
Laboratory work's/Lab N2/: 2.2Lab.cpp  2Lab.cpp
Laboratory work's/Lab N3/: 3Lab.cpp
Laboratory work's/Lab N4/: 4.2Lab.cpp  4.3Lab.cpp  4Lab.cpp
Laboratory work's/Lab N5/: 5.1Lab.cpp  5.2Lab.cpp
Laboratory work's/Lab N6/: 6_1Lab.cpp  CMakeLists.txt
Laboratory work's/Lab N8/: 8.1Lab.cpp  8.2Lab.cpp  CMakeLists.txt  input.txt
Laboratory work's/Lab N9/: CMakeLists.txt
Lectures/Lec N1/: CMakeLists.txt  Lec_N1.cpp
Web PHP/Lab N1/: docker-compose.yml
Web PHP/Lab N2/: index.php
Web PHP/Lab N3/: 1_task_ab.php  2_task_a.php  2_task_b-1.php  2_task_b-2.php  2_task_c-1.php  2_task_c-2.php
Web PHP/Lab N4/: composer.txt  task_1.php  task_2.php
Web PHP/Lab N5/: database.php  lab_5_1.php  lab_5_2.php
(+240 files in other folders)
